[tool.poetry]
name = "testproject"
version = "0.1.0"
description = "Why do you ask me about description?"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
